# unomd

./: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  LICENSE  README.md  docker-compose.yml  environment.yaml  install_dependencies.sh  pyproject.toml  run_docker.sh
docs/: API.md
docs/tutorials/: Getting_Started.md
example/: 4w52_C_EPE.sdf
example/config/: simulation_config.yaml
logs/: .gitkeep
notebooks/: example_tutorial.ipynb
src/easy_md/main/: quickrun.py  run_analysis.py  run_energy_minimization.py  run_forcefield_parameterization.py  run_mmpbsa.py  run_simulation.py  run_solvation.py  run_visualization.py
src/easy_md/utils/: amber_files.py  config.py  dcd_image.py  fileparser.py  info_logger.py  log.py  mmpbsa.py  rmsd_rmsf.py  simulation_util.py
src/unomd/main/: quickrun.py  run_energy_minimization.py  run_forcefield_parameterization.py  run_html_export.py  run_ligand_preparation.py  run_mmpbsa.py  run_simulation.py  run_solvation.py
src/unomd/utils/: amber_files.py  config.py  fileparser.py  ligand_util.py  openmm_structure_analyzer.py  simulation_util.py
tests/: quickrun_test.py  test_setup.py
